[gd_scene load_steps=11 format=3 uid="uid://bxo0sh4orkuvg"]

[ext_resource type="Script" path="res://Old/laser.gd" id="1_m8drn"]
[ext_resource type="Texture2D" uid="uid://d4leui5fvoc6o" path="res://Old/red.png" id="2_osclu"]
[ext_resource type="AudioStream" uid="uid://mavqlrltd8fd" path="res://bgm/Lasersfx.mp3" id="3_ni6jw"]

[sub_resource type="Gradient" id="Gradient_bcw42"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_31ycx"]
gradient = SubResource("Gradient_bcw42")

[sub_resource type="Curve" id="Curve_a0hvc"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.540943, 0.987678), 0.0, 0.0, 0, 0, Vector2(0.890819, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_svydm"]
curve = SubResource("Curve_a0hvc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2q4dn"]
particle_flag_disable_z = true
initial_velocity_max = 120.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_svydm")
color_ramp = SubResource("GradientTexture1D_31ycx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tmro4"]
particle_flag_disable_z = true
initial_velocity_max = 250.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_svydm")
color_ramp = SubResource("GradientTexture1D_31ycx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l2lsr"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, 98, 0)
tangential_accel_min = 100.0
tangential_accel_max = 100.0

[node name="laser" type="RayCast2D"]
z_index = 2000
target_position = Vector2(500, 0)
collide_with_areas = true
script = ExtResource("1_m8drn")

[node name="Line2D" type="Line2D" parent="."]
z_index = 2000
points = PackedVector2Array(-2, 0, 136, 0)
default_color = Color(0.941176, 0, 0, 1)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="onceTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = 2000
emitting = false
amount = 18
process_material = SubResource("ParticleProcessMaterial_2q4dn")
texture = ExtResource("2_osclu")
lifetime = 0.3

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
z_index = 2000
emitting = false
amount = 18
process_material = SubResource("ParticleProcessMaterial_tmro4")
texture = ExtResource("2_osclu")
lifetime = 0.3

[node name="GPUParticles2D3" type="GPUParticles2D" parent="."]
z_index = 2000
emitting = false
amount = 18
process_material = SubResource("ParticleProcessMaterial_l2lsr")
texture = ExtResource("2_osclu")
lifetime = 0.3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ni6jw")
volume_db = -50.0
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="onceTime" to="." method="_on_once_time_timeout"]
